dh-python (3.20180712) UNRELEASED; urgency=medium

  * dh_python{2,3}:
    - fix \.so.* symlink renaming for non-default Python versions
      (closes: 739500, 903698)

 -- Piotr Ożarowski <piotr@debian.org>  Wed, 11 Jul 2018 23:27:42 +0200

dh-python (3.20180607) experimental; urgency=medium

  [ Scott Kitterman ]
  * Stop setting minimum python and python3 versions since the minimum version
    is in all supported releases 

  [ Piotr Ożarowski ]
  * pybuild: set DEB_PYTHON_INSTALL_LAYOUT to "deb" if it's not set already

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 07 Jun 2018 23:56:25 +0200

dh-python (3.20180326) unstable; urgency=medium

  * pybuild: fix cross compiling stuff to use dpkg-architecture if available
    (and move dpkg-dev to Suggests)
  * Add python3-distutils to Recommends to make the transition easier

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 26 Mar 2018 21:19:20 +0200

dh-python (3.20180318) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/copyright: Use https protocol in Format field
  * d/changelog: Remove trailing whitespaces

  [ Ben Finney ]
  * Ignore leading and trailing whitespace from ‘pydist’ lines when parsing
    (closes: 860139)

  [ Piotr Ożarowski ]
  * pybuild.pm: add support for DEBPYTHON{3,}_{DEFAULT,SUPPORTED} env. vars
    (closes: 861132)
  * pybuild:
    - support cross compiling Python 3.X extensions (i.e. set
      _PYTHON_SYSCONFIGDATA_NAME env. and add dpkg-dev to Depends
      closes: 892931)
  * Standards-Version is 4.1.3 now (no changes needed)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 18 Mar 2018 19:52:49 +0100

dh-python (3.20180313) unstable; urgency=medium

  [ Ondřej Nový ]
  * When depends on python{3,}-pbr, set PBR_VERSION to upstream version

  [ Dirk Thomas ]
  * Use relative install-scripts path in pybuild's distutils build system

  [ Piotr Ożarowski ]
  * dh_python2: rewrite /usr/bin/python shebangs to /usr/bin/python2
  * pybuild: