@@ -3,6 +3,9 @@ dh-python (3.20180712) UNRELEASED; urgency=medium
   * dh_python{2,3}:
     - fix \.so.* symlink renaming for non-default Python versions
       (closes: 739500, 903698)
+    - when files cannot be shared between Python versions because of
+      differences, print (in --verbose mode) a unified diff for diagnostic
+      purposes (closes: 801710, thanks to Barry Warsaw for the original patch)
 
  -- Piotr Ożarowski <piotr@debian.org>  Wed, 11 Jul 2018 23:27:42 +0200
 
